Updated docker-compose.yml with ohifv3 and arm64 images. Updated ohif.js with ohifv3 compatible javascript.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   pacs:
     container_name: orthanc
     image: jodogne/orthanc-plugins
+# for arm64, use fatihvice/orthanc-plugins:latest
+#    image: fatihvice/orthanc-plugins:latest
     ports:
       - 8042:8042
       - 4242:4242
@@ -15,7 +17,9 @@ services:
 
   ohif_viewer:
     container_name: ohif
-    image: ohif/viewer
+    image: ohif/app
+# for arm64, use threehappypenguins/ohif
+#    image: threehappypenguins/ohif
     ports:
       - 3000:80
     environment:
